# Console_Store_Simulator

./: CMakeLists.txt  README.md
data/: products.txt  products_upd.txt
include/: seller.h  storage.h
src/: main.cpp  seller.cpp  storage.cpp
